[gd_scene load_steps=13 format=2]

[ext_resource path="res://Target.gd" type="Script" id=1]
[ext_resource path="res://FaceTarget.gd" type="Script" id=2]
[ext_resource path="res://GunTurret.gd" type="Script" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 100, 2, 100 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.709804, 0.968627, 0.560784, 1 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -50, 1, 50, 50, 1, 50, -50, -1, 50, 50, 1, 50, 50, -1, 50, -50, -1, 50, 50, 1, -50, -50, 1, -50, 50, -1, -50, -50, 1, -50, -50, -1, -50, 50, -1, -50, 50, 1, 50, 50, 1, -50, 50, -1, 50, 50, 1, -50, 50, -1, -50, 50, -1, 50, -50, 1, -50, -50, 1, 50, -50, -1, -50, -50, 1, 50, -50, -1, 50, -50, -1, -50, 50, 1, 50, -50, 1, 50, 50, 1, -50, -50, 1, 50, -50, 1, -50, 50, 1, -50, -50, -1, 50, 50, -1, 50, -50, -1, -50, 50, -1, 50, 50, -1, -50, -50, -1, -50 )

[sub_resource type="SphereMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.866667, 0, 0, 1 )

[sub_resource type="SphereShape" id=6]

[sub_resource type="CubeMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0, 0.27451, 1, 1 )

[node name="World" type="Spatial"]

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.85522, 0.259133, -0.448831, 0, 0.866025, 0.5, 0.518266, -0.42761, 0.740642, -41.7589, 43.4245, 57.7467 )
current = true
far = 1000.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.965926, 0.183013, -0.183013, 0, 0.707107, 0.707107, 0.258819, -0.683013, 0.683013, 0, 0, 0 )
shadow_enabled = true

[node name="Target" type="KinematicBody" parent="." groups=[
"targets",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 21, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Target"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Target"]
shape = SubResource( 6 )

[node name="GunTurret" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 28 )
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="GunTurret"]
wait_time = 0.2
autostart = true

[node name="FaceTargetY" type="Spatial" parent="GunTurret"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="GunTurret/FaceTargetY"]
transform = Transform( 2.4, 0, 0, 0, 2.4, 0, 0, 0, 2.4, 0, -2.24481, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="FaceTargetX" type="Spatial" parent="GunTurret/FaceTargetY"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="GunTurret/FaceTargetY/FaceTargetX"]
transform = Transform( -4.98833e-08, 1.1412, 0, -1.1412, -4.98833e-08, 0, 0, 0, 4.98134, 0, 0, -3.81398 )
mesh = SubResource( 7 )
material/0 = SubResource( 9 )

[node name="FirePoint" type="Spatial" parent="GunTurret/FaceTargetY/FaceTargetX"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, -8.76351 )

[connection signal="timeout" from="GunTurret/Timer" to="GunTurret" method="fire"]
